WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
131075
<
rdar://problem/16294704
> Remove _pageExtendedBackgroundColor entirely
https://bugs.webkit.org/show_bug.cgi?id=131075
Summary
<rdar://problem/16294704> Remove _pageExtendedBackgroundColor entirely
Benjamin Poulain
Reported
2014-04-01 16:09:39 PDT
<
rdar://problem/16294704
> Remove _pageExtendedBackgroundColor entirely
Attachments
Patch
(2.26 KB, patch)
2014-04-01 16:10 PDT
,
Benjamin Poulain
bdakin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Benjamin Poulain
Comment 1
2014-04-01 16:10:09 PDT
Created
attachment 228335
[details]
Patch
Benjamin Poulain
Comment 2
2014-04-01 20:37:13 PDT
Committed
r166629
: <
http://trac.webkit.org/changeset/166629
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug