<rdar://problem/16294704> Remove _pageExtendedBackgroundColor entirely https://bugs.webkit.org/show_bug.cgi?id=131075

Patch by Benjamin Poulain <bpoulain@apple.com> on 2014-04-01
Reviewed by Beth Dakin.

* UIProcess/API/Cocoa/WKWebView.mm:
(-[WKWebView _pageExtendedBackgroundColor]): Deleted.
* UIProcess/API/Cocoa/WKWebViewPrivate.h:


Canonical link: https://commits.webkit.org/149133@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@166629 268f45cc-cd09-0410-ab3c-d52691b4dbfc